--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SwapSwoop - Quantum Coin App</title>
+  <title>SwapSwoop - Sundaries money Swaping & Sharing App (QTC)</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans">
@@ -13,7 +13,7 @@
   <img src="logo.png" alt="SwapSwoop Logo" class="h-20 w-20 md:h-28 md:w-28" />
   <div class="mx-auto text-center">
     <h1 class="text-xl md:text-2xl font-bold text-indigo-600" data-en="SwapSwoop" data-ar="SwapSwoop">SwapSwoop</h1>
-    <p class="text-sm text-gray-500" data-en="Quantum Coin Platform" data-ar="منصة العملة الكمومية">Quantum Coin Platform</p>
+    <p class="text-sm text-gray-500" data-en="Quantum Coin Platform" data-ar=" منصة المبادلة والنثريات التشاركية">Quantum Coin Platform</p>
   </div>
   <div class="flex items-center space-x-4">
     <button id="langToggle" class="px-4 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-100">العربية</button>
