--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img src="logo.png" alt="SwapSwoop Logo" class="h-20 w-20 md:h-28 md:w-28" />
   <div class="mx-auto text-center">
     <h1 class="text-xl md:text-2xl font-bold text-indigo-600" data-en="SwapSwoop" data-ar="SwapSwoop">SwapSwoop</h1>
-    <p class="text-sm text-gray-500" data-en="Quantum Coin Platform" data-ar=" منصة المبادلة والنثريات التشاركية">Quantum Coin Platform</p>
+    <p class="text-sm text-gray-500" data-en="Sundaries money Swaping & Sharing Platform" data-ar=" منصة المبادلة والنثريات التشاركية">Quantum Coin Platform</p>
   </div>
   <div class="flex items-center space-x-4">
     <button id="langToggle" class="px-4 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-100">العربية</button>
@@ -22,7 +22,7 @@
 
 <!-- Hero Section -->
 <section class="text-center py-16 bg-gradient-to-br from-indigo-100 to-white px-4">
-  <h2 class="text-3xl font-bold mb-4" data-en="Quantum Coin for secured fiat swaps and shared fiat expenses pools (ex: travel pool)" data-ar="عملة كمومية لتبادلات العملات الآمنة ومحافظ المصاريف المشتركة (مثل: محفظة السفر)">Quantum Coin for secured fiat swaps and shared fiat expenses pools (ex: travel pool)</h2>
+  <h2 class="text-3xl font-bold mb-4" data-en="QTC blockchain for secured fiat swaps and shared fiat expenses pools (ex: travel pool)" data-ar="عملة كمومية لتبادلات العملات الآمنة ومحافظ المصاريف المشتركة (مثل: محفظة السفر)">Quantum Coin for secured fiat swaps and shared fiat expenses pools (ex: travel pool)</h2>
   <p class="text-lg mb-6 text-gray-700 max-w-xl mx-auto" data-en="Secure, fast, and transparent swaps of fiat with our own blockchain algorithm. Manage shared expenses seamlessly in pools." data-ar="تبادلات آمنة وسريعة وشفافة للعملات مع خوارزمية البلوكتشين الخاصة بنا. إدارة المصاريف المشتركة بسلاسة داخل المحافظ.">Secure, fast, and transparent swaps of fiat with our own blockchain algorithm. Manage shared expenses seamlessly in pools.</p>
   <div class="flex justify-center mt-10">
     <a href="https://swapswoop.onrender.com" target="_blank" rel="noopener noreferrer">
