--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img src="logo.png" alt="SwapSwoop Logo" class="h-20 w-20 md:h-28 md:w-28" />
   <div class="mx-auto text-center">
     <h1 class="text-xl md:text-2xl font-bold text-indigo-600" data-en="SwapSwoop" data-ar="SwapSwoop">SwapSwoop</h1>
-    <p class="text-sm text-gray-500" data-en="Sundaries money Swaping Sharing Platform" data-ar=" منصة المبادلة والنثريات التشاركية">Sundaries money Swaping Sharing Platform</p>
+    <p class="text-sm text-gray-500" data-en="Sundaries money Swaping Sharing Platform" data-ar=" منصة المبادلة والنثريات التشاركية">Sundaries money Swaping & Sharing Platform</p>
   </div>
   <div class="flex items-center space-x-4">
     <button id="langToggle" class="px-4 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-100">العربية</button>
@@ -36,7 +36,7 @@
   <div class="max-w-4xl mx-auto">
     <h3 class="text-2xl font-bold mb-6 text-center text-indigo-700" data-en="Core Features" data-ar="الميزات الأساسية">Core Features</h3>
     <ul class="list-disc list-inside text-gray-700 space-y-2">
-      <li data-en="Secure fiat swaps using Quantum Coin" data-ar="تبادلات آمنة للعملات باستخدام العملة الكمومية">Secure fiat swaps using Quantum Coin</li>
+      <li data-en="Secure fiat swaps using QTC blockchain" data-ar=" تبادلات آمنة للعملات باستخدام خوارزمية سلسلة الكتل ">Secure fiat swaps using QTC blockchain</li>
       <li data-en="Create shared expense pools" data-ar="إنشاء محافظ مصاريف مشتركة">Create shared expense pools</li>
       <li data-en="Track contributions and approvals" data-ar="تتبع المساهمات والموافقات">Track contributions and approvals</li>
       <li data-en="View wallet balances & transaction history" data-ar="عرض أرصدة المحفظة وتاريخ المعاملات">View wallet balances & transaction history</li>
