--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 <!-- Hero Section -->
 <section class="text-center py-16 bg-gradient-to-br from-indigo-100 to-white px-4">
-  <h2 class="text-3xl font-bold mb-4" data-en="QTC blockchain for secured fiat swaps and shared fiat expenses pools (ex: travel pool)" data-ar="عملة كمومية لتبادلات العملات الآمنة ومحافظ المصاريف المشتركة (مثل: محفظة السفر)">QTC blockchain for secured fiat swaps and shared fiat expenses pools (ex: travel pool) (ex: travel pool)</h2>
+  <h2 class="text-3xl font-bold mb-4" data-en="QTC blockchain for secured fiat swaps and shared fiat expenses pools (ex: travel pool)" data-ar="خوارزمية سلسلة الكتل الخاصة لتبادلات العملات الآمنة ومحافظ المصاريف المشتركة (مثل: محفظة السفر)">QTC blockchain for secured fiat swaps and shared fiat expenses pools (ex: travel pool) (ex: travel pool)</h2>
   <p class="text-lg mb-6 text-gray-700 max-w-xl mx-auto" data-en="Secure, fast, and transparent swaps of fiat with our own blockchain algorithm. Manage shared expenses seamlessly in pools." data-ar="تبادلات آمنة وسريعة وشفافة للعملات مع خوارزمية البلوكتشين الخاصة بنا. إدارة المصاريف المشتركة بسلاسة داخل المحافظ.">Secure, fast, and transparent swaps of fiat with our own blockchain algorithm. Manage shared expenses seamlessly in pools.</p>
   <div class="flex justify-center mt-10">
     <a href="https://swapswoop.onrender.com" target="_blank" rel="noopener noreferrer">
@@ -36,7 +36,7 @@
   <div class="max-w-4xl mx-auto">
     <h3 class="text-2xl font-bold mb-6 text-center text-indigo-700" data-en="Core Features" data-ar="الميزات الأساسية">Core Features</h3>
     <ul class="list-disc list-inside text-gray-700 space-y-2">
-      <li data-en="Secure fiat swaps using QTC blockchain" data-ar=" تبادلات آمنة للعملات باستخدام خوارزمية سلسلة الكتل ">Secure fiat swaps using QTC blockchain</li>
+      <li data-en="Secure fiat swaps using QTC blockchain" data-ar=" تبادلات آمنة للعملات باستخدام خوارزمية سلسلة الكتل الخاصة">Secure fiat swaps using QTC blockchain</li>
       <li data-en="Create shared expense pools" data-ar="إنشاء محافظ مصاريف مشتركة">Create shared expense pools</li>
       <li data-en="Track contributions and approvals" data-ar="تتبع المساهمات والموافقات">Track contributions and approvals</li>
       <li data-en="View wallet balances & transaction history" data-ar="عرض أرصدة المحفظة وتاريخ المعاملات">View wallet balances & transaction history</li>
@@ -112,3 +112,4 @@
 
 </body>
 </html>
+
