--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <img src="logo.png" alt="SwapSwoop Logo" class="h-20 w-20 md:h-28 md:w-28" />
   <div class="mx-auto text-center">
     <h1 class="text-xl md:text-2xl font-bold text-indigo-600" data-en="SwapSwoop" data-ar="SwapSwoop">SwapSwoop</h1>
-    <p class="text-sm text-gray-500" data-en="Sundaries money Swaping Sharing Platform" data-ar=" منصة المبادلة والنثريات التشاركية">Sundaries money Swaping & Sharing Platform</p>
+    <p class="text-sm text-gray-500" data-en="Sundaries money Swaping Sharing Platform" data-ar=" منصة المبادلة والنثريات التشاركية">Sundaries money Swaping Sharing Platform</p>
   </div>
   <div class="flex items-center space-x-4">
     <button id="langToggle" class="px-4 py-2 border border-indigo-600 text-indigo-600 rounded hover:bg-indigo-100">العربية</button>
@@ -112,4 +112,5 @@
 
 </body>
 </html>
+
 
